🙈 `9.png` doesn't exist

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       }
     })
     // each image is listed in a thumbnail at the top of the page
-    for (var i = 1; i <= 9; i++) {
+    for (var i = 1; i < 9; i++) {
       // create a new image element
       const img = document.createElement("img");
       // set the source
